tests/testcases/invalid/semantic/test_method_access_protected.ciel
// Error: Accessing protected method from outside class
class MyClass {
protected:
    void protectedMethod() {
        return;
    }
    
public:
    void publicMethod() {
        return;
    }
};

int main() {
    class MyClass obj;
    obj.publicMethod();     // OK: public
    obj.protectedMethod();  // ERROR: protected
    return 0;
}
